--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "dependencies": {
     "chrome-aws-lambda": "7.0.0",
     "marked": "2.0.0",
+    "node-fetch": "2.6.1",
     "puppeteer-core": "7.0.0",
     "twemoji": "13.0.1"
   },
   "devDependencies": {
     "@types/marked": "1.2.2",
+    "@types/node-fetch": "2.5.10",
     "@types/puppeteer": "5.4.3",
     "@types/puppeteer-core": "5.4.0",
+    "@vercel/node": "1.9.1",
     "typescript": "4.1.5"
   }
 }
