--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "marked": "2.0.0",
     "node-fetch": "2.6.1",
     "puppeteer-core": "7.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "twemoji": "13.0.1"
   },
   "devDependencies": {
@@ -18,6 +20,8 @@
     "@types/node-fetch": "2.5.10",
     "@types/puppeteer": "5.4.3",
     "@types/puppeteer-core": "5.4.0",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
     "@vercel/node": "1.9.1",
     "typescript": "4.1.5"
   }
